[package]
name = "uccp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
pest = "2.1.3"
pest_derive = "2.1.0"
glob = "0.3.0"
serde_json = "1.0.69"
crc = "2.1.0"
humantime = "2.1.0"
rayon = "1.5.1"
unrealscriptplus = { git = "https://github.com/DarklightGames/UnrealScriptPlus", branch = "main" }
#unrealscriptplus = { path = "C:/UnrealScriptPlus" }